--- a/book-my-class/src/components/Footer/Footer.css
+++ b/book-my-class/src/components/Footer/Footer.css
@@ -1,3 +1,11 @@
 .footer{
     background-color: purple;
+    display: grid;
+    margin: 0 auto;
+}
+
+.footer__dev{
+    align-self: start;
+    text-align: left;
+    
 }
