--- a/book-my-class/src/components/Main/Main.css
+++ b/book-my-class/src/components/Main/Main.css
@@ -1,3 +1,14 @@
 .main{
     background-color: orange;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+}
+
+.main__book-btn{
+    max-width: 50%;
+    justify-self: center;
+    align-items: center;
+
 }
